# AOC2024

./: .ghc.environment.aarch64-darwin-9.10.1  .gitignore  AOC2024.cabal  Main.hs  ]
2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Year2016.hs
2024/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Year2024.hs
util/: Grid.hs  Problem.hs
