cabal-version:      3.0
name:               AOC
version:            0.1.0.0
synopsis:           My solutions for Advent of Code!
license:            MIT
author:             Ivan Galakhov
maintainer:         igalakhov.nyc@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -Werror

library AOCUtil 
  exposed-modules:     Problem, Grid 
  hs-source-dirs:      util
  build-depends:       base, containers, parsec, linear
  default-language:    Haskell2010

library AOC2016
  exposed-modules:     Year2016 
  other-modules:       Day01, Day02, Day03, Day04, Day05, Day06, Day07
  hs-source-dirs:      2016
  build-depends:       base, containers, parsec, linear,
                       parsec3-numbers, split, cryptohash-md5,
                       bytestring,
                       AOCUtil
  default-language:    Haskell2010

library AOC2024
  exposed-modules:     Year2024
  other-modules:       Day01, Day02, Day03, Day04, Day05,
                       Day09, Day10, Day11, Day12
  hs-source-dirs:      2024 
  build-depends:       base, containers, parsec, linear,
                       parsec3-numbers, split, array, transformers,
                       AOCUtil
  default-language:    Haskell2010

executable AOC 
    import:           warnings 
    main-is:          Main.hs
    build-depends:    base, containers,
                      AOCUtil, AOC2016, AOC2024
    default-language: Haskell2010
